--- a/Campex/Views/campgrounds/show.ejs
+++ b/Campex/Views/campgrounds/show.ejs
@@ -8,6 +8,10 @@
   </head>
   <body>
     <h1><%= campground1.title %></h1>
-    <h2><%= campground1.location %> </h2>
+    <h2><%= campground1.location %></h2>
+
+    <footer>
+      <a href="/campgrounds">all campgrounds</a>
+    </footer>
   </body>
 </html>
