--- a/Campex/Views/campgrounds/index.ejs
+++ b/Campex/Views/campgrounds/index.ejs
@@ -8,6 +8,11 @@
   </head>
   <body>
     <h1>All Campgrounds</h1>
+
+    <div>
+        <a href="/campgrounds/new">add campground</a>
+    </div>
+
     <ul>
       <% for(let campground of campgrounds){ %>
       <li>
