--- a/Campex/Views/campgrounds/new.ejs
+++ b/Campex/Views/campgrounds/new.ejs
@@ -10,12 +10,12 @@
     <h1>Add new campground</h1>
     <form action="/campgrounds" method="POST">
       <div>
-          <label for="title"></label>
-          <input type="text" id="title" name="campground[title]">
+        <label for="title"></label>
+        <input type="text" id="title" name="campground[title]" />
       </div>
       <div>
-          <label for="location"></label>
-          <input type="text" id="location" name="campground[location]">
+        <label for="location"></label>
+        <input type="text" id="location" name="campground[location]" />
       </div>
       <button>Add Campground</button>
     </form>
