--- a/Campex/Views/campgrounds/show.ejs
+++ b/Campex/Views/campgrounds/show.ejs
@@ -12,6 +12,7 @@
 
     <footer>
       <a href="/campgrounds">all campgrounds</a>
+      <a href="/campgrounds/<%= campground1._id %>/edit">edit</a>
     </footer>
   </body>
 </html>
