--- a/Campex/Views/campgrounds/edit.ejs
+++ b/Campex/Views/campgrounds/edit.ejs
@@ -1,35 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Edit Campground</title>
-  </head>
-  <body>
-    <h1>Edit</h1>
-    <form action="/campgrounds/<%=campground1._id%>?_method=PUT" method="POST">
-      <div>
-        <label for="title"></label>
-        <input
-          type="text"
-          id="title"
-          name="campground[title]"
-          value="<%= campground1.title %>"
-        />
-      </div>
-      <div>
-        <label for="location"></label>
-        <input
-          type="text"
-          id="location"
-          name="campground[location]"
-          value="<%= campground1.location %> "
-        />
-      </div>
-      <button>Update Campground</button>
-    </form>
+<% 'layout/boilerplate' %>
 
-    <a href="/campgrounds/<%= campground1._id %> ">Back to Campgrounds</a>
-  </body>
-</html>
+<h1>Edit</h1>
+<form action="/campgrounds/<%=campground1._id%>?_method=PUT" method="POST">
+  <div>
+    <label for="title"></label>
+    <input
+      type="text"
+      id="title"
+      name="campground[title]"
+      value="<%= campground1.title %>"
+    />
+  </div>
+  <div>
+    <label for="location"></label>
+    <input
+      type="text"
+      id="location"
+      name="campground[location]"
+      value="<%= campground1.location %> "
+    />
+  </div>
+  <button>Update Campground</button>
+</form>
+
+<a href="/campgrounds/<%= campground1._id %> ">Back to Campgrounds</a>
