--- a/Campex/Views/campgrounds/index.ejs
+++ b/Campex/Views/campgrounds/index.ejs
@@ -1,24 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Campgrounds</title>
-  </head>
-  <body>
-    <h1>All Campgrounds</h1>
+<% 'layout/boilerplate' %>
+<h1>All Campgrounds</h1>
 
-    <div>
-      <a href="/campgrounds/new">add campground</a>
-    </div>
+<div>
+  <a href="/campgrounds/new">add campground</a>
+</div>
 
-    <ul>
-      <% for(let campground of campgrounds){ %>
-      <li>
-        <a href="/campgrounds/<%= campground._id %>"><%= campground.title %></a>
-      </li>
-      <% } %>
-    </ul>
-  </body>
-</html>
+<ul>
+  <% for(let campground of campgrounds){ %>
+  <li>
+    <a href="/campgrounds/<%= campground._id %>"><%= campground.title %></a>
+  </li>
+  <% } %>
+</ul>
