--- a/Campex/Views/campgrounds/show.ejs
+++ b/Campex/Views/campgrounds/show.ejs
@@ -1,21 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Show</title>
-  </head>
-  <body>
-    <h1><%= campground1.title %></h1>
-    <h2><%= campground1.location %></h2>
+<% 'layout/boilerplate' %>
 
-    <footer>
-      <a href="/campgrounds">all campgrounds</a>
-      <a href="/campgrounds/<%= campground1._id %>/edit">edit</a>
-      <form action="/campgrounds/<%=campground1._id%>?_method=DELETE" method="POST">
-          <button>Delete</button>
-      </form>
-    </footer>
-  </body>
-</html>
+<h1><%= campground1.title %></h1>
+<h2><%= campground1.location %></h2>
+
+<footer>
+  <a href="/campgrounds">all campgrounds</a>
+  <a href="/campgrounds/<%= campground1._id %>/edit">edit</a>
+  <form action="/campgrounds/<%=campground1._id%>?_method=DELETE" method="POST">
+    <button>Delete</button>
+  </form>
+</footer>
