fixed boilerplate include and added bootstrap

--- a/Campex/Views/campgrounds/edit.ejs
+++ b/Campex/Views/campgrounds/edit.ejs
@@ -1,4 +1,4 @@
-<% 'layout/boilerplate' %>
+<% layout('layouts/boilerplate') %>
 
 <h1>Edit</h1>
 <form action="/campgrounds/<%=campground1._id%>?_method=PUT" method="POST">
