--- a/Campex/Views/campgrounds/new.ejs
+++ b/Campex/Views/campgrounds/new.ejs
@@ -1,4 +1,4 @@
-<% 'layout/boilerplate' %>
+<% layout('layouts/boilerplate') %>
 
 <h1>Add new campground</h1>
 <form action="/campgrounds" method="POST">
