--- a/Campex/Views/campgrounds/show.ejs
+++ b/Campex/Views/campgrounds/show.ejs
@@ -1,4 +1,4 @@
-<% 'layout/boilerplate' %>
+<% layout('layouts/boilerplate') %>
 
 <h1><%= campground1.title %></h1>
 <h2><%= campground1.location %></h2>
