--- a/Campex/Views/campgrounds/edit.ejs
+++ b/Campex/Views/campgrounds/edit.ejs
@@ -4,21 +4,11 @@
 <form action="/campgrounds/<%=campground1._id%>?_method=PUT" method="POST">
   <div>
     <label for="title"></label>
-    <input
-      type="text"
-      id="title"
-      name="campground[title]"
-      value="<%= campground1.title %>"
-    />
+    <input type="text" id="title" name="campground[title]" value="<%= campground1.title %>" />
   </div>
   <div>
     <label for="location"></label>
-    <input
-      type="text"
-      id="location"
-      name="campground[location]"
-      value="<%= campground1.location %> "
-    />
+    <input type="text" id="location" name="campground[location]" value="<%= campground1.location %> " />
   </div>
   <button>Update Campground</button>
 </form>
