--- a/Campex/Views/layouts/boilerplate.ejs
+++ b/Campex/Views/layouts/boilerplate.ejs
@@ -1,3 +1,4 @@
+<!-- boilerplate with ejs-mate -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -16,10 +17,11 @@
   </head>
 
   <body>
-    <!-- boilerplate with ejs-mate -->
+    <!-- including navbar -->
+    <%- include('../partials/navbar') %>
 
     <!-- body of others -->
-    <main class="container"><%- body %></main>
+    <main class="container mt-5"><%- body %></main>
 
     <!-- bootstrap js -->
     <script
