--- a/Campex/Views/campgrounds/show.ejs
+++ b/Campex/Views/campgrounds/show.ejs
@@ -2,6 +2,8 @@
 
 <h1><%= campground1.title %></h1>
 <h2><%= campground1.location %></h2>
+<img src="<%= campground1.image %> " alt="">
+<p><%= campground1.description %> </p>
 
 <footer>
   <a href="/campgrounds">all campgrounds</a>
