--- a/Campex/Views/campgrounds/new.ejs
+++ b/Campex/Views/campgrounds/new.ejs
@@ -1,16 +1,36 @@
 <% layout('layouts/boilerplate') %>
 
-<h1>Add new campground</h1>
-<form action="/campgrounds" method="POST">
-  <div>
-    <label for="title"></label>
-    <input type="text" id="title" name="campground[title]" />
+<div class="row">
+  <h1 class="text-center">New Campground</h1>
+  <div class="col-6 offset-3">
+    <form action="/campgrounds" method="POST">
+      <div class="mb-3">
+        <label class="form-label" for="title">Title</label>
+        <input class="form-control" type="text" id="title" name="campground[title]" />
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="location">Location</label>
+        <input class="form-control" type="text" id="location" name="campground[location]" />
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="image">Image URL</label>
+        <input class="form-control" type="text" id="image" name="campground[image]" />
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="price">Price</label>
+        <div class="input-group mb-3">
+          <span class="input-group-text">Rs.</span>
+          <input type="text" class="form-control" id="price" placeholder="00" aria-label="Price" name="campground[price]" />
+          <span class="input-group-text">.00</span>
+        </div>
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="description">Description</label>
+        <textarea class="form-control" type="text" id="description" name="campground[description]"></textarea>
+      </div>
+      <div class="mb-3">
+        <button class="btn btn-success">Add Campground</button>
+      </div>
+    </form>
   </div>
-  <div>
-    <label for="location"></label>
-    <input type="text" id="location" name="campground[location]" />
-  </div>
-  <button>Add Campground</button>
-</form>
-
-<a href="/campgrounds">All Campgrounds</a>
+</div>
