--- a/Campex/Views/campgrounds/show.ejs
+++ b/Campex/Views/campgrounds/show.ejs
@@ -1,14 +1,25 @@
 <% layout('layouts/boilerplate') %>
 
-<h1><%= campground1.title %></h1>
-<h2><%= campground1.location %></h2>
-<img src="<%= campground1.image %> " alt="">
-<p><%= campground1.description %> </p>
-
-<footer>
-  <a href="/campgrounds">all campgrounds</a>
-  <a href="/campgrounds/<%= campground1._id %>/edit">edit</a>
-  <form action="/campgrounds/<%=campground1._id%>?_method=DELETE" method="POST">
-    <button>Delete</button>
-  </form>
-</footer>
+<div class="row">
+  <div class="col-6 offset-3">
+    <!-- bootstrap card -->
+    <div class="card mb-3">
+      <img src="<%= campground1.image %>" class="card-img-top" alt="..." />
+      <div class="card-body">
+        <h5 class="card-title"><%= campground1.title %></h5>
+        <p class="card-text"><%= campground1.description %></p>
+      </div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item text-muted"><%= campground1.location %></li>
+        <li class="list-group-item">Rs. <%= campground1.price %>/- per night</li>
+      </ul>
+      <div class="card-body">
+        <a href="/campgrounds/<%= campground1._id %>/edit" class="card-link btn btn-info">Edit</a>
+        <form class="d-inline" action="/campgrounds/<%=campground1._id%>?_method=DELETE" method="POST">
+          <button class="btn btn-danger">Delete</button>
+        </form>
+      </div>
+      <div class="card-footer text-muted">2 days ago</div>
+    </div>
+  </div>
+</div>
