--- a/Campex/Views/campgrounds/edit.ejs
+++ b/Campex/Views/campgrounds/edit.ejs
@@ -3,18 +3,21 @@
 <div class="row">
   <h1 class="text-center">Edit Campground</h1>
   <div class="col-6 offset-3">
-    <form action="/campgrounds/<%=campground1._id%>?_method=PUT" method="POST">
+    <form action="/campgrounds/<%=campground1._id%>?_method=PUT" method="POST" novalidate class="validated-form">
       <div class="mb-3">
         <label class="form-label" for="title">Title</label>
-        <input class="form-control" type="text" id="title" name="campground[title]" value="<%= campground1.title %>" />
+        <input class="form-control" type="text" id="title" name="campground[title]" value="<%= campground1.title %>" required />
+        <div class="valid-feedback">Looks good!</div>
       </div>
       <div class="mb-3">
         <label class="form-label" for="location">Location</label>
-        <input class="form-control" type="text" id="location" name="campground[location]" value="<%= campground1.location %>" />
+        <input class="form-control" type="text" id="location" name="campground[location]" value="<%= campground1.location %>" required />
+        <div class="valid-feedback">Looks good!</div>
       </div>
       <div class="mb-3">
         <label class="form-label" for="image">Image URL</label>
-        <input class="form-control" type="text" id="image" name="campground[image]" value="<%= campground1.image %>" />
+        <input class="form-control" type="text" id="image" name="campground[image]" value="<%= campground1.image %>" required />
+        <div class="valid-feedback">Looks good!</div>
       </div>
       <div class="mb-3">
         <label class="form-label" for="price">Price</label>
@@ -28,13 +31,16 @@
             aria-label="Price"
             name="campground[price]"
             value="<%= campground1.price %>"
+            required
           />
           <span class="input-group-text">.00</span>
+          <div class="valid-feedback">Looks good!</div>
         </div>
       </div>
       <div class="mb-3">
         <label class="form-label" for="description">Description</label>
-        <textarea class="form-control" type="text" id="description" name="campground[description]"><%= campground1.description %></textarea>
+        <textarea class="form-control" type="text" id="description" name="campground[description]" required><%= campground1.description %></textarea>
+        <div class="valid-feedback">Looks good!</div>
       </div>
       <div class="mb-3">
         <button class="btn btn-info">Update Campground</button>
