--- a/Campex/Views/campgrounds/new.ejs
+++ b/Campex/Views/campgrounds/new.ejs
@@ -3,34 +3,48 @@
 <div class="row">
   <h1 class="text-center">New Campground</h1>
   <div class="col-6 offset-3">
-    <form action="/campgrounds" method="POST">
+    <!-- adding novalidate to stop default response of the browser against "Required" term -->
+    <!-- also adding class to handle from js -->
+    <form action="/campgrounds" method="POST" novalidate class="validated-form">
       <div class="mb-3">
         <label class="form-label" for="title">Title</label>
-        <input class="form-control" type="text" id="title" name="campground[title]" />
+        <input class="form-control" type="text" id="title" name="campground[title]" required />
+        <div class="valid-feedback">Looks good!</div>
       </div>
+
       <div class="mb-3">
         <label class="form-label" for="location">Location</label>
-        <input class="form-control" type="text" id="location" name="campground[location]" />
+        <input class="form-control" type="text" id="location" name="campground[location]" required />
+        <div class="valid-feedback">Looks good!</div>
       </div>
+
       <div class="mb-3">
         <label class="form-label" for="image">Image URL</label>
-        <input class="form-control" type="text" id="image" name="campground[image]" />
+        <input class="form-control" type="text" id="image" name="campground[image]" required />
+        <div class="valid-feedback">Looks good!</div>
       </div>
+
       <div class="mb-3">
         <label class="form-label" for="price">Price</label>
         <div class="input-group mb-3">
           <span class="input-group-text">Rs.</span>
-          <input type="text" class="form-control" id="price" placeholder="00" aria-label="Price" name="campground[price]" />
+          <input type="text" class="form-control" id="price" placeholder="00" aria-label="Price" name="campground[price]" required />
           <span class="input-group-text">.00</span>
+          <div class="valid-feedback">Looks good!</div>
         </div>
       </div>
+
       <div class="mb-3">
         <label class="form-label" for="description">Description</label>
-        <textarea class="form-control" type="text" id="description" name="campground[description]"></textarea>
+        <textarea class="form-control" type="text" id="description" name="campground[description]" required></textarea>
+        <div class="valid-feedback">Looks good!</div>
       </div>
+
       <div class="mb-3">
         <button class="btn btn-success">Add Campground</button>
       </div>
     </form>
   </div>
 </div>
+
+
