--- a/Campex/Views/layouts/boilerplate.ejs
+++ b/Campex/Views/layouts/boilerplate.ejs
@@ -34,5 +34,33 @@
 
     <!-- including footer partial -->
     <%- include('../partials/footer') %>
+
+    <!-- copied js data from bootstrap validation. -->
+    <script>
+      // Example starter JavaScript for disabling form submissions if there are invalid fields
+      (function () {
+        "use strict";
+
+        // Fetch all the forms we want to apply custom Bootstrap validation styles to
+        // changing class to our custom class of form
+        const forms = document.querySelectorAll(".validated-form");
+
+        // Loop over them and prevent submission
+        Array.from(forms).forEach(function (form) {
+          form.addEventListener(
+            "submit",
+            function (event) {
+              if (!form.checkValidity()) {
+                event.preventDefault();
+                event.stopPropagation();
+              }
+
+              form.classList.add("was-validated");
+            },
+            false
+          );
+        });
+      })();
+    </script>
   </body>
 </html>
