--- a/Campex/Views/campgrounds/show.ejs
+++ b/Campex/Views/campgrounds/show.ejs
@@ -1,25 +1,38 @@
 <% layout('layouts/boilerplate') %>
 
 <div class="row">
-  <div class="col-6 offset-3">
-    <!-- bootstrap card -->
-    <div class="card mb-3">
-      <img src="<%= campground1.image %>" class="card-img-top" alt="..." />
-      <div class="card-body">
-        <h5 class="card-title"><%= campground1.title %></h5>
-        <p class="card-text"><%= campground1.description %></p>
+   <div class="col-6 offset-3">
+      <!-- bootstrap card -->
+      <div class="card mb-3">
+         <img src="<%= campground1.image %>" class="card-img-top" alt="..." />
+         <div class="card-body">
+            <h5 class="card-title"><%= campground1.title %></h5>
+            <p class="card-text"><%= campground1.description %></p>
+         </div>
+         <ul class="list-group list-group-flush">
+            <li class="list-group-item text-muted"><%= campground1.location %></li>
+            <li class="list-group-item">Rs. <%= campground1.price %>/- per night</li>
+         </ul>
+         <div class="card-body">
+            <a href="/campgrounds/<%= campground1._id %>/edit" class="card-link btn btn-info">Edit</a>
+            <form class="d-inline" action="/campgrounds/<%=campground1._id%>?_method=DELETE" method="POST">
+               <button class="btn btn-danger">Delete</button>
+            </form>
+         </div>
+         <div class="card-footer text-muted">2 days ago</div>
       </div>
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item text-muted"><%= campground1.location %></li>
-        <li class="list-group-item">Rs. <%= campground1.price %>/- per night</li>
-      </ul>
-      <div class="card-body">
-        <a href="/campgrounds/<%= campground1._id %>/edit" class="card-link btn btn-info">Edit</a>
-        <form class="d-inline" action="/campgrounds/<%=campground1._id%>?_method=DELETE" method="POST">
-          <button class="btn btn-danger">Delete</button>
-        </form>
-      </div>
-      <div class="card-footer text-muted">2 days ago</div>
-    </div>
-  </div>
+      <!-- for review -->
+      <h2>Leave a review:</h2>
+      <form class="mb-3" action="">
+         <div class="mb-3">
+            <label class="form-label" for="rating">Rating</label>
+            <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating" />
+         </div>
+         <div class="mb-3">
+            <label class="form-label" for="reviewBody">Review:</label>
+            <textarea class="form-control" name="review[body]" id="reviewBody" cols="30" rows="3"></textarea>
+         </div>
+         <button class="btn btn-success">Add Review</button>
+      </form>
+   </div>
 </div>
