--- a/Campex/Views/campgrounds/show.ejs
+++ b/Campex/Views/campgrounds/show.ejs
@@ -23,7 +23,7 @@
       </div>
       <!-- for review -->
       <h2>Leave a review:</h2>
-      <form class="mb-3" action="">
+      <form class="mb-3" action="/campgrounds/<%= campground1._id %>/reviews" method="POST">
          <div class="mb-3">
             <label class="form-label" for="rating">Rating</label>
             <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating" />
