added server & client side validation

--- a/Campex/Views/campgrounds/show.ejs
+++ b/Campex/Views/campgrounds/show.ejs
@@ -23,14 +23,17 @@
       </div>
       <!-- for review -->
       <h2>Leave a review:</h2>
-      <form class="mb-3" action="/campgrounds/<%= campground1._id %>/reviews" method="POST">
+      <form class="mb-3 validated-form" action="/campgrounds/<%= campground1._id %>/reviews" method="POST" novalidate>
          <div class="mb-3">
             <label class="form-label" for="rating">Rating</label>
             <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating" />
          </div>
          <div class="mb-3">
             <label class="form-label" for="reviewBody">Review:</label>
-            <textarea class="form-control" name="review[body]" id="reviewBody" cols="30" rows="3"></textarea>
+            <textarea class="form-control" name="review[body]" id="reviewBody" cols="30" rows="3" required></textarea>
+            <div class="valid-feedback">
+              Looks good!
+            </div>
          </div>
          <button class="btn btn-success">Add Review</button>
       </form>
