--- a/Campex/Views/campgrounds/show.ejs
+++ b/Campex/Views/campgrounds/show.ejs
@@ -43,6 +43,9 @@
          <div class="card-body">
             <h5 class="card-title">Rating: <%= review.rating %></h5>
             <p class="card-text">Review: <%= review.body %></p>
+            <form action="/campgrounds/<%= campground1._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST">
+               <button class="btn btn-danger">Delete</button>
+            </form>
          </div>
       </div>
       <% } %>
