changes are in disc.
- moved campgrounds & reviews routes to separate files
- added express sessions
- added flash messages with bootstrap

--- a/Campex/Views/layouts/boilerplate.ejs
+++ b/Campex/Views/layouts/boilerplate.ejs
@@ -22,8 +22,12 @@
       <!-- including navbar partial -->
       <%- include('../partials/navbar') %>
 
-      <!-- body of others -->
-      <main class="container mt-5"><%- body %></main>
+      <main class="container mt-5">
+         <!-- added flash.js -->
+         <%- include('../partials/flash') %>
+         <!-- body of others -->
+         <%- body %>
+      </main>
 
       <!-- bootstrap js -->
       <script
