--- a/Campex/Views/partials/navbar.ejs
+++ b/Campex/Views/partials/navbar.ejs
@@ -20,7 +20,7 @@
             <a class="nav-link" href="/campgrounds/new">New Campground</a>
             <!-- <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
          </div>
-         <div class="navbar-nav ml-auto">
+         <div class="navbar-nav ms-auto">
             <a class="nav-link" href="/login">Login</a>
             <a class="nav-link" href="/register">Signup</a>
             <a class="nav-link" href="/logout">Logout</a>
