--- a/Campex/Views/partials/navbar.ejs
+++ b/Campex/Views/partials/navbar.ejs
@@ -21,9 +21,12 @@
             <!-- <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
          </div>
          <div class="navbar-nav ms-auto">
+            <% if(!currentUser) { %>
             <a class="nav-link" href="/login">Login</a>
             <a class="nav-link" href="/register">Signup</a>
+            <% }else{ %>
             <a class="nav-link" href="/logout">Logout</a>
+            <% } %>
          </div>
       </div>
    </div>
