added user id (author) with addition to every new campground by that user

--- a/Campex/Views/campgrounds/show.ejs
+++ b/Campex/Views/campgrounds/show.ejs
@@ -11,6 +11,7 @@
          </div>
          <ul class="list-group list-group-flush">
             <li class="list-group-item text-muted"><%= campground1.location %></li>
+            <li class="list-group-item">Submitted by <%= campground1.author.username %></li>
             <li class="list-group-item">Rs. <%= campground1.price %>/- per night</li>
          </ul>
          <div class="card-body">
