--- a/Campex/Views/campgrounds/show.ejs
+++ b/Campex/Views/campgrounds/show.ejs
@@ -14,12 +14,16 @@
             <li class="list-group-item">Submitted by <%= campground1.author.username %></li>
             <li class="list-group-item">Rs. <%= campground1.price %>/- per night</li>
          </ul>
+
+         <% if(currentUser && campground1.author.equals(currentUser)){ %>
          <div class="card-body">
             <a href="/campgrounds/<%= campground1._id %>/edit" class="card-link btn btn-info">Edit</a>
             <form class="d-inline" action="/campgrounds/<%=campground1._id%>?_method=DELETE" method="POST">
                <button class="btn btn-danger">Delete</button>
             </form>
          </div>
+         <% } %>
+
          <div class="card-footer text-muted">2 days ago</div>
       </div>
    </div>
