--- a/Campex/Views/campgrounds/show.ejs
+++ b/Campex/Views/campgrounds/show.ejs
@@ -14,7 +14,6 @@
             <li class="list-group-item">Submitted by <%= campground1.author.username %></li>
             <li class="list-group-item">Rs. <%= campground1.price %>/- per night</li>
          </ul>
-
          <% if(currentUser && campground1.author.equals(currentUser)){ %>
          <div class="card-body">
             <a href="/campgrounds/<%= campground1._id %>/edit" class="card-link btn btn-info">Edit</a>
@@ -23,12 +22,12 @@
             </form>
          </div>
          <% } %>
-
          <div class="card-footer text-muted">2 days ago</div>
       </div>
    </div>
    <div class="col-6">
       <!-- add review -->
+      <% if(currentUser) {%>
       <h2>Leave a review:</h2>
       <form class="mb-3 validated-form" action="/campgrounds/<%= campground1._id %>/reviews" method="POST" novalidate>
          <div class="mb-3">
@@ -42,15 +41,19 @@
          </div>
          <button class="btn btn-success">Add Review</button>
       </form>
+      <% } %>
       <!-- show review -->
       <% for(let review of campground1.reviews) { %>
       <div class="card mb-3">
          <div class="card-body">
             <h5 class="card-title">Rating: <%= review.rating %></h5>
+            <h6 class="card-subtitle mb-2 text-muted">By <%= review.author.username %></h6>
             <p class="card-text">Review: <%= review.body %></p>
+            <% if(currentUser && review.author.equals(currentUser)){ %>
             <form action="/campgrounds/<%= campground1._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST">
                <button class="btn btn-danger">Delete</button>
             </form>
+            <% } %>
          </div>
       </div>
       <% } %>
