--- a/Campex/Views/campgrounds/show.ejs
+++ b/Campex/Views/campgrounds/show.ejs
@@ -1,4 +1,5 @@
 <% layout('layouts/boilerplate') %>
+<link rel="stylesheet" href="/stylesheets/starability.css" />
 
 <div class="row">
    <div class="col-6">
@@ -30,12 +31,29 @@
       <% if(currentUser) {%>
       <h2>Leave a review:</h2>
       <form class="mb-3 validated-form" action="/campgrounds/<%= campground1._id %>/reviews" method="POST" novalidate>
-         <div class="mb-3">
+         <!-- <div class="mb-3">
             <label class="form-label" for="rating">Rating</label>
             <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating" />
+         </div> -->
+         <div class="mb-3">
+            <!-- code from starability -->
+            <fieldset class="starability-checkmark">
+               <!-- <legend>First rating:</legend> -->
+               <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="0" checked aria-label="No rating." />
+               <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+               <label for="first-rate1" title="Terrible">1 star</label>
+               <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+               <label for="first-rate2" title="Not good">2 stars</label>
+               <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+               <label for="first-rate3" title="Average">3 stars</label>
+               <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+               <label for="first-rate4" title="Very good">4 stars</label>
+               <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+               <label for="first-rate5" title="Amazing">5 stars</label>
+            </fieldset>
          </div>
          <div class="mb-3">
-            <label class="form-label" for="reviewBody">Review:</label>
+            <label class="form-label" for="reviewBody">Review Text:</label>
             <textarea class="form-control" name="review[body]" id="reviewBody" cols="30" rows="3" required></textarea>
             <div class="valid-feedback">Looks good!</div>
          </div>
@@ -46,8 +64,8 @@
       <% for(let review of campground1.reviews) { %>
       <div class="card mb-3">
          <div class="card-body">
-            <h5 class="card-title">Rating: <%= review.rating %></h5>
-            <h6 class="card-subtitle mb-2 text-muted">By <%= review.author.username %></h6>
+            <h5 class="card-title"><%= review.author.username %></h5>
+            <p class="starability-result" data-rating="<%= review.rating %>">Rated: <%= review.rating %> stars</p>
             <p class="card-text">Review: <%= review.body %></p>
             <% if(currentUser && review.author.equals(currentUser)){ %>
             <form action="/campgrounds/<%= campground1._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST">
