--- a/Campex/Views/campgrounds/index.ejs
+++ b/Campex/Views/campgrounds/index.ejs
@@ -1,19 +1,13 @@
 <% layout('layouts/boilerplate') %>
 
 <h1>All Campgrounds</h1>
-
-<div>
-  <a href="/campgrounds/new">add campground</a>
-</div>
-
 <% for(let campground of campgrounds){ %>
-
 <div class="card" mb-3>
   <div class="row">
     <div class="col-md-4">
-      <img src="<%= campground.image %>" class="img-fluid" alt="" />
+      <img src="<%= campground.images[0].url %>" class="img-fluid" alt="" />
     </div>
-    <div class="col-mg-8">
+    <div class="col-md-8">
       <div class="card-body">
         <h5 class="card-title"><%= campground.title %></h5>
         <p class="card-text"><%= campground.description %> </p>
