--- a/Campex/Views/campgrounds/show.ejs
+++ b/Campex/Views/campgrounds/show.ejs
@@ -3,11 +3,31 @@
 
 <div class="row">
    <div class="col-6">
+      <!-- bootstrap carousel -->
+      <div id="campgroundCarousel" class="carousel slide" data-bs-ride="carousel">
+         <div class="carousel-inner">
+            <!-- setting index for each image while looping as we've to set one/first image as 'active' -->
+            <% campground1.images.forEach((img, i) => { %>
+            <div class="carousel-item <%= i === 0 ? 'active' : '' %>">
+               <img src="<%= img.url %>" class="d-block w-100" />
+            </div>
+            <% }) %>
+         </div>
+         <!-- but stop showing sliders on single image carousel -->
+         <% if(campground1.images.length > 1){ %>
+         <button class="carousel-control-prev" type="button" data-bs-target="#campgroundCarousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+         </button>
+         <button class="carousel-control-next" type="button" data-bs-target="#campgroundCarousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+         </button>
+         <% } %>
+      </div>
+
       <!-- bootstrap card -->
       <div class="card mb-3">
-         <% for(let img of campground1.images){ %>
-         <img src="<%= img.url %>" class="card-img-top" alt="..." />
-         <% } %>
          <div class="card-body">
             <h5 class="card-title"><%= campground1.title %></h5>
             <p class="card-text"><%= campground1.description %></p>
