added bootstrap file picker

--- a/Campex/Views/campgrounds/edit.ejs
+++ b/Campex/Views/campgrounds/edit.ejs
@@ -15,10 +15,8 @@
             <div class="valid-feedback">Looks good!</div>
          </div>
          <div class="mb-3">
-            <label class="form-label" for="image">Add Images</label>
-            <input type="file" name="image" id="image" multiple />
-            <!-- <input class="form-control" type="text" id="image" name="campground[image]" value="<%= campground1.image %>" required /> -->
-            <!-- <div class="valid-feedback">Looks good!</div> -->
+            <label for="image" class="form-label">Add more images</label>
+            <input class="form-control" type="file" id="image" multiple name="image" />
          </div>
          <div class="mb-3">
             <label class="form-label" for="price">Price</label>
