--- a/Campex/Views/campgrounds/new.ejs
+++ b/Campex/Views/campgrounds/new.ejs
@@ -24,7 +24,12 @@
         <input class="form-control" type="text" id="image" name="campground[image]" required />
         <div class="valid-feedback">Looks good!</div>
       </div> -->
-         <input type="file" name="image" id="image" multiple />
+      <!-- bootstrap file picker -->
+         <div class="mb-3">
+            <label for="image" class="form-label">Add Images</label>
+            <input class="form-control" type="file" id="image" multiple name="image" />
+         </div>
+         <!-- <input type="file" name="image" id="image" multiple /> -->
 
          <div class="mb-3">
             <label class="form-label" for="price">Price</label>
