--- a/Campex/Views/campgrounds/show.ejs
+++ b/Campex/Views/campgrounds/show.ejs
@@ -3,6 +3,8 @@
 
 <div class="row">
    <div class="col-6">
+      <!-- mapbox code -->
+      <div id="map" style="width: 400px; height: 300px"></div>
       <!-- bootstrap carousel -->
       <div id="campgroundCarousel" class="carousel slide" data-bs-ride="carousel">
          <div class="carousel-inner">
@@ -99,3 +101,12 @@
       <% } %>
    </div>
 </div>
+
+
+<script>
+   const mapboxToken = "<%-process.env.MAPBOX_TOKEN%>";
+</script>
+<!-- including mapbox js from public folder -->
+<!-- but this i want access token here and pass it to below js file -->
+<!-- so requiring access token in here (before this runs) -->
+<script src="/js/mapboxJS.js"></script>
