--- a/Campex/Views/layouts/boilerplate.ejs
+++ b/Campex/Views/layouts/boilerplate.ejs
@@ -14,6 +14,10 @@
          integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0"
          crossorigin="anonymous"
       />
+
+      <!-- mapbox GL JS files -->
+      <script src="https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js"></script>
+      <link href="https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css" rel="stylesheet" />
    </head>
 
    <!-- including bootstrap flexbox
