--- a/Campex/Views/campgrounds/index.ejs
+++ b/Campex/Views/campgrounds/index.ejs
@@ -3,22 +3,28 @@
 <h1>All Campgrounds</h1>
 <% for(let campground of campgrounds){ %>
 <div class="card" mb-3>
-  <div class="row">
-    <div class="col-md-4">
-      <img src="<%= campground.images[0].url %>" class="img-fluid" alt="" />
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title"><%= campground.title %></h5>
-        <p class="card-text"><%= campground.description %> </p>
-        <p class="card-text">
-          <small class="text-muted">
-            <%= campground.location %> 
-          </small>
-        </p>
-        <a class="btn btn-primary" href="/campgrounds/<%= campground._id %> ">View <%= campground.title %> </a>
+   <div class="row">
+      <div class="col-md-4">
+         <% if(campground.images.length){ %>
+         <img src="<%= campground.images[0].url %>" class="img-fluid" alt="" />
+         <% }else{ %>
+         <img
+            src="https://res.cloudinary.com/campex/image/upload/v1622444222/CAMPEX_Campgrounds/Default_Campground_Image/no_image.png"
+            class="img-fluid"
+            alt=""
+         />
+         <% } %>
       </div>
-    </div>
-  </div>
+      <div class="col-md-8">
+         <div class="card-body">
+            <h5 class="card-title"><%= campground.title %></h5>
+            <p class="card-text"><%= campground.description %></p>
+            <p class="card-text">
+               <small class="text-muted"> <%= campground.location %> </small>
+            </p>
+            <a class="btn btn-primary" href="/campgrounds/<%= campground._id %> ">View <%= campground.title %> </a>
+         </div>
+      </div>
+   </div>
 </div>
 <% } %>
