--- a/Campex/Views/campgrounds/show.ejs
+++ b/Campex/Views/campgrounds/show.ejs
@@ -3,8 +3,6 @@
 
 <div class="row">
    <div class="col-6">
-      <!-- mapbox code -->
-      <div id="map" style="width: 400px; height: 300px"></div>
       <!-- bootstrap carousel -->
       <div id="campgroundCarousel" class="carousel slide" data-bs-ride="carousel">
          <div class="carousel-inner">
@@ -50,7 +48,12 @@
          <div class="card-footer text-muted">2 days ago</div>
       </div>
    </div>
+
    <div class="col-6">
+      <div class="mb-3">
+         <!-- mapbox code -->
+         <div id="map" style="width: 400px; height: 300px"></div>
+      </div>
       <!-- add review -->
       <% if(currentUser) {%>
       <h2>Leave a review:</h2>
