added mapbox cluster on campground's index page

--- a/Campex/Views/campgrounds/index.ejs
+++ b/Campex/Views/campgrounds/index.ejs
@@ -1,5 +1,7 @@
 <% layout('layouts/boilerplate') %>
 
+<div id="map" style="width: 100%; height: 500px"></div>
+
 <h1>All Campgrounds</h1>
 <% for(let campground of campgrounds){ %>
 <div class="card" mb-3>
@@ -28,3 +30,10 @@
    </div>
 </div>
 <% } %>
+
+<script>
+   // passing token to mapboxJS.js
+   const mapboxToken = "<%-process.env.MAPBOX_TOKEN%>";
+</script>
+<!-- including mbxCluster.js js -->
+<script src="/js/mbxCluster.js"></script>
