--- a/Campex/Views/campgrounds/show.ejs
+++ b/Campex/Views/campgrounds/show.ejs
@@ -114,4 +114,4 @@
 <!-- including mapbox js from public folder -->
 <!-- but this i want access token here and pass it to below js file -->
 <!-- so requiring access token in here (before this runs) -->
-<script src="/js/mapboxJS.js"></script>
+<script src="/js/mbx.js"></script>
