--- a/Campex/Views/home.ejs
+++ b/Campex/Views/home.ejs
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
-  </head>
-  <body>
-    <h1>Home! Campex</h1>
-  </body>
+   <head>
+      <meta charset="UTF-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+      <!-- bootstrap v5 -->
+      <link
+         href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css"
+         rel="stylesheet"
+         integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0"
+         crossorigin="anonymous"
+      />
+
+      <title>Home</title>
+   </head>
+   <body class="d-flex h-100 text-center text-white bg-dark">
+      <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+         <header class="mb-auto">
+            <div>
+               <h3 class="flot-md-left mb-0">CAMPEX</h3>
+               <nav class="nav nav-masthead justify-content-center float-md-right">
+                  <a href="#" aria-current="page" class="nav-link active">Home</a>
+                  <a href="/campgrounds" class="nav-link">Campgrounds</a>
+                  <% if(!currentUser) { %>
+                  <a class="nav-link" href="/login">Login</a>
+                  <a class="nav-link" href="/register">Register</a>
+                  <% }else{ %>
+                  <a class="nav-link" href="/logout">Logout</a>
+                  <% } %>
+               </nav>
+            </div>
+         </header>
+      </div>
+
+      <!-- bootstrap js -->
+      <script
+         src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
+         integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
+         crossorigin="anonymous"
+      ></script>
+   </body>
 </html>
