--- a/Campex/Views/partials/navbar.ejs
+++ b/Campex/Views/partials/navbar.ejs
@@ -23,7 +23,7 @@
          <div class="navbar-nav ms-auto">
             <% if(!currentUser) { %>
             <a class="nav-link" href="/login">Login</a>
-            <a class="nav-link" href="/register">Signup</a>
+            <a class="nav-link" href="/register">Register</a>
             <% }else{ %>
             <a class="nav-link" href="/logout">Logout</a>
             <% } %>
