updated home page

--- a/Campex/Views/home.ejs
+++ b/Campex/Views/home.ejs
@@ -12,10 +12,11 @@
          integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0"
          crossorigin="anonymous"
       />
+      <link rel="stylesheet" href="/stylesheets/home.css" />
 
       <title>Home</title>
    </head>
-   <body class="d-flex h-100 text-center text-white bg-dark">
+   <body class="d-flex text-center text-white bg-dark">
       <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
          <header class="mb-auto">
             <div>
@@ -32,6 +33,17 @@
                </nav>
             </div>
          </header>
+         <main class="px-3">
+            <h1>CAMPEX</h1>
+            <p class="lead">
+               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat ut quidem ullam repellat quod, natus praesentium facilis debitis
+               perspiciatis iusto.
+            </p>
+            <a href="/campgrounds" class="btn btn-large btn-secondary font-weight-bold text-white bg-white">View Campgrounds</a>
+         </main>
+         <footer class="mt-auto text-white-50">
+            <p>&copy; 2021 CAMPEX</p>
+         </footer>
       </div>
 
       <!-- bootstrap js -->
