home page style fix

--- a/Campex/Views/home.ejs
+++ b/Campex/Views/home.ejs
@@ -37,9 +37,10 @@
             <h1>CAMPEX</h1>
             <p class="lead">
                Welcome to CAMPEX! <br />
-               Jump right in and explore our many campgrounds. <br> Feel free to share some of your own and comment on others!
+               Jump right in and explore our many campgrounds. <br />
+               Feel free to share some of your own and comment on others!
             </p>
-            <a href="/campgrounds" class="btn btn-large btn-secondary font-weight-bold text-white bg-white">View Campgrounds</a>
+            <a href="/campgrounds" class="btn btn-large btn-secondary font-weight-bold text-white">View Campgrounds</a>
          </main>
          <footer class="mt-auto text-white-50">
             <p>&copy; 2021 CAMPEX</p>
