--- a/Campex/public/stylesheets/home.css
+++ b/Campex/public/stylesheets/home.css
@@ -4,11 +4,11 @@ body {
       url("https://images.unsplash.com/photo-1533873984035-25970ab07461?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1053&q=80");
    background-size: cover;
    background-position: center;
-   text-shadow: 0 0.05.rem 0.1rem rgba(0, 0, 0, 0.5);
-   box-shadow: 0 0 5rem rgba(0, 0, 0, 0.5);
+   text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
+   box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5);
 }
 
-.covercontainer {
+.cover-container {
    /* vw = view width */
    max-width: 60vw;
 }
@@ -17,7 +17,7 @@ body {
    padding: 0.25rem 0;
    font-weight: 700;
    color: rgba(255, 255, 255, 0.5);
-   margin-left: 1 rem;
+   margin-left: 1rem;
    border-bottom: 00.25rem solid transparent;
 }
 .nav-link:hover {
@@ -26,8 +26,8 @@ body {
 }
 
 .nav-link.active {
-   columns: white;
-   border-bottom-color: rgba(255, 255, 255, 0.5);
+   color: white;
+   border-bottom-color: white;
 }
 
 .btn-secondary,
