some redesigning tweaks

--- a/Campex/Views/campgrounds/new.ejs
+++ b/Campex/Views/campgrounds/new.ejs
@@ -2,7 +2,7 @@
 
 <div class="row">
    <h1 class="text-center">New Campground</h1>
-   <div class="col-6 offset-3">
+   <div class="col-md-6 offset-md-3">
       <!-- adding novalidate to stop default response of the browser against "Required" term -->
       <!-- also adding class to handle from js -->
       <!-- setting encrypt type to get images from form -->
