--- a/Campex/Views/campgrounds/show.ejs
+++ b/Campex/Views/campgrounds/show.ejs
@@ -52,7 +52,7 @@
    <div class="col-6">
       <div class="mb-3">
          <!-- mapbox code -->
-         <div id="map" style="width: 400px; height: 300px"></div>
+         <div id="map"></div>
       </div>
       <!-- add review -->
       <% if(currentUser) {%>
