--- a/Campex/Views/layouts/boilerplate.ejs
+++ b/Campex/Views/layouts/boilerplate.ejs
@@ -18,6 +18,9 @@
       <!-- mapbox GL JS files -->
       <script src="https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js"></script>
       <link href="https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css" rel="stylesheet" />
+
+      <!-- custom css -->
+      <link rel="stylesheet" href="/stylesheets/app.css" />
    </head>
 
    <!-- including bootstrap flexbox
