--- a/Campex/Views/users/register.ejs
+++ b/Campex/Views/users/register.ejs
@@ -1,21 +1,36 @@
 <% layout('layouts/boilerplate') %>
 
-<h1>Register</h1>
-<form class="validated-form" novalidate action="/register" method="POST">
-   <div class="mb-3">
-      <label class="form-label" for="username">Username</label>
-      <input class="form-control" type="text" name="username" id="username" required />
-      <div class="valid-feedback">Looks good!</div>
+<div class="container d-flex justify-content-center">
+   <div class="row justify-content-md-center">
+      <div class="col-lg-4 col-md-6">
+         <div class="card shadow mb-3">
+            <img
+               class="card-img-top"
+               src="https://images.unsplash.com/photo-1515444744559-7be63e1600de?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
+               alt=""
+            />
+            <div class="card-body">
+               <h5>Register</h5>
+               <form class="validated-form" novalidate action="/register" method="POST">
+                  <div class="mb-3">
+                     <label class="form-label" for="username">Username</label>
+                     <input class="form-control" type="text" name="username" id="username" required autofocus />
+                     <div class="valid-feedback">Looks good!</div>
+                  </div>
+                  <div class="mb-3">
+                     <label class="form-label" for="email">Email</label>
+                     <input class="form-control" type="email" name="email" id="email" required />
+                     <div class="valid-feedback">Looks good!</div>
+                  </div>
+                  <div class="mb-3">
+                     <label class="form-label" for="password">Password</label>
+                     <input class="form-control" type="password" name="password" id="password" required />
+                     <div class="valid-feedback">Looks good!</div>
+                  </div>
+                  <button class="btn btn-success">Register</button>
+               </form>
+            </div>
+         </div>
+      </div>
    </div>
-   <div class="mb-3">
-      <label class="form-label" for="email">Email</label>
-      <input class="form-control" type="email" name="email" id="email" required />
-      <div class="valid-feedback">Looks good!</div>
-   </div>
-   <div class="mb-3">
-      <label class="form-label" for="password">Password</label>
-      <input class="form-control" type="password" name="password" id="password" required />
-      <div class="valid-feedback">Looks good!</div>
-   </div>
-   <button class="btn btn-success">Register</button>
-</form>
+</div>
