--- a/Campex/Views/campgrounds/index.ejs
+++ b/Campex/Views/campgrounds/index.ejs
@@ -1,10 +1,11 @@
 <% layout('layouts/boilerplate') %>
+<link rel="stylesheet" href="stylesheets/indexPage.css" />
 
 <div id="cluster-map"></div>
 
 <h1>All Campgrounds</h1>
 <% for(let campground of campgrounds){ %>
-<div class="card mb-3" >
+<div class="card mb-3">
    <div class="row">
       <div class="col-md-4">
          <% if(campground.images.length){ %>
