--- a/Campex/Views/layouts/boilerplate.ejs
+++ b/Campex/Views/layouts/boilerplate.ejs
@@ -32,7 +32,7 @@
       <main class="container mt-5">
          <!-- added flash.js -->
          <%- include('../partials/flash') %>
-         <!-- body of others -->
+         <!-- MAIN BODY -->
          <%- body %>
       </main>
 
