--- a/Campex/public/stylesheets/app.css
+++ b/Campex/public/stylesheets/app.css
@@ -1,5 +1,6 @@
 body {
-   background-color: #457b9d;
+   color: whitesmoke;
+   background-color: #191a1a;
 }
 
 #cluster-map {
@@ -10,4 +11,33 @@ body {
 #map {
    width: 100%;
    height: 300px;
+}
+
+.btn-primary {
+}
+
+.btn-primary:hover {
+}
+
+.card {
+   background: #343332;
+}
+
+.list-group-item {
+   color: white;
+   background: #343332;
+}
+
+.form-control {
+   background: #343332;
+   color: whitesmoke;
+}
+
+.valid-feedback {
+   color: #52b788;
+}
+
+.img-thumbnail {
+   object-fit: cover;
+   height: 100px;
 }
